Table users {
  uid varchar [pk, note: "사용자 식별자"]
  code varchar [unique, note: "커플 연결 시 사용되는 임시 코드"]
  
  // 관계 조회 비용(Read)을 줄이기 위해 파트너, 다마고, 기념일 정보를 직접 참조합니다.
  partnerUID varchar [ref: - users.uid, note: "연결된 파트너의 UID"]
  damagoID varchar [ref: > damagos.id, note: "현재 키우고 있는(Active) 다마고 문서 ID"]
  coupleID varchar [ref: > couples.id, note: "커플 관계 ID"]
  anniversaryDate timestamp [note: "커플 기념일"]

  // --- Profile ---
  nickname varchar [note: "사용자 닉네임"]

  // --- Push & Live Activity Tokens ---
  fcmToken text [note: "일반 푸시 알림용 FCM 토큰"]
  laStartToken text [note: "Live Activity 원격 시작용 토큰 (iOS 17.2+)"]
  laUpdateToken text [note: "실행 중인 Live Activity 업데이트용 토큰"]
  
  // 토큰 조회 시 이 값들을 함께 확인하여, False일 경우 APNs 요청을 보내지 않아 비용을 절감합니다.
  useFCM boolean [default: true, note: "앱 내 일반 알림 수신 여부"]
  useLiveActivity boolean [default: true, note: "Live Activity 업데이트 수신 여부"]

  createdAt timestamp [default: `now()`]
  updatedAt timestamp [note: "최종 정보 수정 시각"]
  
  Note: "개별 사용자 정보와 푸시 토큰, 그리고 앱 설정값을 저장합니다."
}

Table couples {
  id varchar [pk, note: "커플 고유 ID (Firestore Auto-ID)"]
  user1UID varchar [ref: > users.uid, note: "사용자 1 uid"]
  user2UID varchar [ref: > users.uid, note: "사용자 2 uid"]
  damagoID varchar [ref: > damagos.id, note: "현재 키우고 있는(Active) 다마고 ID"]
  
  totalCoin integer [default: 0, note: "커플이 보유한 재화 (코인)"]
  foodCount integer [default: 0, note: "커플이 보유한 먹이 개수"]
  currentQuestionID varchar [ref: > dailyQuestions.id, note: "현재 활성화된 일일 질문 ID"]
  anniversaryDate timestamp [note: "기념일 원본 데이터"]
  createdAt timestamp [default: `now()`]
  
  // --- 밸런스 게임 통계 (Balance Game Stats) ---
  balanceGameStats_totalAnswered integer [default: 0, note: "총 플레이한 밸런스 게임 수"]
  balanceGameStats_matchedGames integer [default: 0, note: "일치한 밸런스 게임 수"]
  balanceGameStats_lastPlayedAt timestamp [note: "마지막 밸런스 게임 플레이 시각"]
  
  // --- 일일 응답 통계 (Daily Question Stats) ---
  dailyQuestionStats_totalAnswered integer [default: 0, note: "총 답변한 일일 응답 수"]
  dailyQuestionStats_lastAnsweredAt timestamp [note: "마지막 일일 응답 답변 시각"]
  
  Note: '''
  두 사용자의 관계 및 기념일 원본, 현재 활성화된 다마고 정보를 저장합니다.
  balanceGameStats는 맵(Map) 형태로 저장되며, 밸런스 게임 통계를 추적합니다.
  dailyQuestionStats는 맵(Map) 형태로 저장되며, 일일 응답 통계를 추적합니다.
  [Subcollection] balanceGameAnswers: 커플의 밸런스 게임 답변 이력
  [Subcollection] dailyQuestionAnswers: 커플의 일일 응답 답변 이력
  '''
}

Table damagos {
  id varchar [pk, note: "다마고 고유 ID (Firestore Auto-ID)"]
  coupleID varchar [ref: > couples.id, note: "소유주 커플 ID"]
  
  // --- 고정 속성 (Static Attributes) ---
  damagoName varchar [note: "펫 애칭/이름"]

  // --- 동적 상태 (Dynamic State) ---
  damagoType varchar [note: "펫 종류 (예: teddy, cloudy...)"]
  isHungry boolean [default: false, note: "배고픔 상태"]
  statusMessage text [note: "상태 메시지 (Live Activity 표시용)"]

  // --- 성장 정보 (Growth Info) ---
  level integer [default: 1, note: "현재 레벨"]
  currentExp integer [default: 0, note: "현재 경험치"]
  maxExp integer [note: "다음 레벨업까지 필요한 경험치"]

  // --- 타임스탬프 & 이력 ---
  lastFedAt timestamp [note: "마지막으로 밥을 먹은 시각"]
  lastUpdatedAt timestamp [note: "상태 최종 업데이트 시각"]
  createdAt timestamp [default: `now()`, note: "생성(입양) 시각"]
  
  totalPlayTime integer [default: 0, note: "총 누적 육성 시간 (초 단위). 펫 교체 시 갱신"]
  lastActiveAt timestamp [default: `now()`, note: "마지막으로 활성화/교체된 시각. 정렬용"]
  
  Note: "커플이 키우는 다마고들의 이력과 상태 정보입니다. Users/Couples의 damagoID가 현재 활성화된 펫을 가리킵니다."
}

// ========================================
// 밸런스 게임 (Balance Game)
// ========================================

Table balanceGames {
  id varchar [pk, note: "밸런스 게임 고유 ID (Firestore Auto-ID)"]
  order integer [note: "표시 순서 (낮은 순서부터 노출)"]

  questionText text [note: "질문 내용"]
  option1 varchar [note: "선택지 1"]
  option2 varchar [note: "선택지 2"]
  
  createdAt timestamp [default: `now()`, note: "질문 생성 시각"]
  
  Note: '''
  밸런스 게임 질문 목록입니다.
  각 질문은 두 개의 선택지로 구성되며, 순서로 관리됩니다.
  '''
}

Table balanceGameAnswers {
  id varchar [pk, note: "밸런스 게임 답변 ID = {coupleID}_{balanceGameID} 형식"]
  coupleID varchar [ref: > couples.id, note: "커플 ID"]
  balanceGameID varchar [ref: > balanceGames.id, note: "밸런스 게임 ID"]
  
  user1Answer integer [note: "사용자1의 선택 (1 or 2), null이면 미답변"]
  user1AnsweredAt timestamp [note: "사용자1 답변 시각"]
  
  user2Answer integer [note: "사용자2의 선택 (1 or 2), null이면 미답변"]
  user2AnsweredAt timestamp [note: "사용자2 답변 시각"]
  
  bothAnswered boolean [default: false, note: "두 사용자 모두 답변 완료 여부"]
  isMatched boolean [note: "두 사용자의 선택 일치 여부 (bothAnswered일 때만 true/false)"]
  
  Note: '''
  커플의 밸런스 게임 답변을 저장합니다.
  Firestore 구조: couples/{coupleID}/balanceGameAnswers/{balanceGameID}
  두 사용자 모두 답변하면 isMatched 값이 계산됩니다.
  '''
}

// ========================================
// 일일 응답 (Daily Question)
// ========================================

Table dailyQuestions {
  id varchar [pk, note: "일일 응답 질문 고유 ID (Firestore Auto-ID)"]
  order integer [note: "표시 순서"]

  questionText text [note: "질문 내용"]
  
  createdAt timestamp [default: `now()`, note: "질문 생성 시각"]
  
  Note: '''
  일일 응답 질문 목록입니다.
  자유 텍스트 답변 형식으로, 매일 새로운 질문을 통해 서로에 대해 알아갑니다.
  '''
}

Table dailyQuestionAnswers {
  id varchar [pk, note: "일일 응답 답변 ID = {coupleID}_{dailyQuestionID} 형식"]
  coupleID varchar [ref: > couples.id, note: "커플 ID"]
  dailyQuestionID varchar [ref: > dailyQuestions.id, note: "일일 응답 질문 ID"]
  
  user1Answer text [note: "사용자1의 답변 텍스트"]
  user1AnsweredAt timestamp [note: "사용자1 답변 시각"]
  
  user2Answer text [note: "사용자2의 답변 텍스트"]
  user2AnsweredAt timestamp [note: "사용자2 답변 시각"]
  
  bothAnswered boolean [default: false, note: "두 사용자 모두 답변 완료 여부"]
  lastAnsweredAt timestamp [note: "두 명 모두 답변을 완료한 시각 (bothAnswered=true 시점)"]
  
  Note: '''
  커플의 일일 응답 답변을 저장합니다.
  Firestore 구조: couples/{coupleID}/dailyQuestionAnswers/{dailyQuestionID}
  두 사용자 모두 답변하면 bothAnswered가 true가 되고 서로의 답변을 확인할 수 있습니다.
  '''
}
